# CodeCraft

./: Makefile  README.md  app.py  config.json  config.py  create_secret_key.py  main.py  pyproject.toml  requirements.txt  utils.py
scripts/: setup.sh
services/: code_service.py  image_service.py  style_service.py
src/: Makefile  utils.py
src/scripts/: create_secret_key.py  setup.sh
src/static/: style.css
src/templates/: base.html  code_input.html  image.html  style_selection.html
static/: style.css
templates/: base.html  code_input.html  image.html  style_selection.html
