[project]
name = "codecraft"
version = "2.0.0"
description = "Create beautiful code snippet images with syntax highlighting"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "flask>=3.0.0",
    "pygments>=2.17.0",
    "playwright>=1.40.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"